edit String.format